# LMS-Toolkit

./: .gitattributes  .gitignore  CONTRIBUTORS.md  NOTICES.md  README.md  SECURITY.md
demonstration/: google-e2e.ipynb  pyproject.toml  schoology-e2e.ipynb
docs/demonstration/: README.md  canvas-e2e.ipynb  google-e2e.ipynb  pyproject.toml  schoology-e2e.ipynb
experimental/canvas/graphql/: canvas_api.py  graphql.py  pyproject.toml  readme.md
experimental/google/fake-data-generator/: README.md  pyproject.toml
experimental/python/: hashing.ipynb  pyproject.toml
experimental/schoology/: .flake8  Pipfile  assignments.ipynb  explore.ipynb  export-assignment-data.py  grades-after-grading-period-change.json  grades.ipynb  grades.json  grading-periods.py  main.py  pyproject.toml  readme.md  usage-analytics.ipynb
experimental/schoology/schoolopy/: __init__.py  authentication.py  main.py  models.py
experimental/zoom/: .pylintrc  README.md  pyproject.toml
experimental/zoom/zoom-extractor/: __init__.py  main.py
src/canvas/: .env.example  Canvas-LMS-API-UML.drawio  README.md  pyproject.toml
src/canvas-extractor/: .coveragerc  .env.example  .gitignore  .mypy.ini  FiddlerRoot.pem  README.md  pyproject.toml  test_extractor_integration.py
src/canvas-extractor/canvas_extractor/: __main__.py  config.py  extract_facade.py
src/canvas-extractor/data-extractor/: README.md  main.py
src/canvas-extractor/edfi_canvas_extractor/: __main__.py  client_facade.py  client_graphql.py  config.py  extract_facade.py  extract_graphql.py
src/canvas-extractor/tests/: conftest.py  pytest.ini  submission.live.data.json  test_canvas_tools.py  test_extract_facade.py
src/canvas/analyze-canvas-data/: README.md
src/canvas/analyze-canvas-data-py/: .env.example  readme.md
src/canvas/data-extractor/: README.md
src/canvas/data-extractor-js/: package.json
src/canvas/data-extractor-py/: readme.md
src/canvas/fizz-1-py/: canvas.py  requirements.txt
src/canvas/fizz-16/: readme.md
src/canvas/initial-canvas-exploration-py/: readme.md
src/canvas/login-and-access-data-py/: Pipfile
src/canvas/tests/: test_canvas_tools.py
src/extractor-lib/: .coveragerc  .gitignore  .mypy.ini  README.md  pyproject.toml
src/file-utils/: .coveragerc  .mypy.ini  pyproject.toml  readme.md
src/file-utils/edfi_lms_file_utils/: constants.py  directory_repository.py  file_reader.py  file_repository.py
src/file-utils/lms_file_utils/: __init__.py  constants.py  directory_repository.py  file_reader.py  file_repository.py
src/file-utils/tests/: constants.py  test_directory_repository.py  test_file_reader.py  test_file_repository.py  test_pyfakefs.py
src/google-classroom-extractor/: .coveragerc  .env.example  .gitignore  .mypi.ini  .mypy.ini  README.md  example.env  mypy.ini  pyproject.toml
src/google-classroom-extractor/data/: .gitignore
src/google-classroom-extractor/edfi_google_classroom_extractor/: __main__.py  config.py  facade.py  request.py  result.py
src/google-classroom-extractor/google-classroom-extractor/: main.py  usage.ipynb
src/google-classroom-extractor/google_classroom_extractor/: __main__.py  config.py  main.py  normalized.py  request.py  student_submissions.ipynb  submissions.ipynb  usage.ipynb
src/google-classroom-extractor/tests/: .gitignore  .pylintrc  helper.py  test_google.py
src/lib/extractor-shared/: .flake8  .gitignore  .mypy.ini  pyproject.toml
src/lms-ds-installer/: README.md  pyproject.toml
src/lms-ds-installer/mssql/: 0000-schema-lms.sql  0001-table-user.sql
src/lms-ds-installer/tests/: test_lms_ds_installer.py
src/lms-ds-loader/: .coveragerc  .dockerignore  .env.example  .mypy.ini  .pylintrc  README.md  mypy.ini  pyproject.toml
src/lms-ds-loader/edfi_lms_ds_loader/: Sql_lms_operations.py  __main__.py  argparser.py  arguments.py  csv_to_sql.py  df_to_db.py  file_processor.py  lms_filesystem_provider.py  loader_facade.py  migrator.py  mssql_lms_operations.py  sql_adapter.py  sql_lms_operations.py
src/lms-ds-loader/lms_ds_loader/: argparser.py  arguments.py  constants.py  csv_to_sql.py  file_processor.py  lms_filesystem_provider.py  main.py  mssql_lms_operations.py
src/lms-ds-loader/tests/: test_argparser.py  test_arguments.py  test_csv_to_sql.py  test_df_to_db.py  test_file_processor.py  test_lms_ds_loader.py  test_lms_filesystem_provider.py  test_loader_facade.py  test_mssql_lms_operations.py
src/lms-ds-loader/tests_integration_mssql/: conftest.py
src/lms-ds-loader/tests_integration_pgsql/: .env.example  conftest.py  pgsql_e2e_helper.py
src/lms-ds-loader/tests_integration_sql/: conftest.py  mssql_e2e_helper.py  test_msssql_soft_delete.py  test_msssql_with_users.py
src/lms-file-tester/: pyproject.toml
src/lms-harmonizer/: .coveragerc  .env.example  .flake8  .gitignore  .mypy.ini  README.md  pyproject.toml  what.txt
src/lms-harmonizer/edfi_lms_harmonizer/: __main__.py  exceptions_reports.py  harmonizer.py  migrator.py  runner.py  sql_for_exceptions_report.py
src/lms-harmonizer/tests/: test_exceptions_reports.py  test_harmonizer.py  test_lms_harmonizer.py
src/lms-harmonizer/tests_e2e/: loaddb.py  migrator_helper_mssql.py  mssql_helper.py
src/lms-harmonizer/tests_integration_mssql/: README.md  conftest.py  mssql_connection.py  mssql_loader.py  mssql_orchestrator.py  mssql_server_config.py  orchestrator.py  server_config.py
src/lms-harmonizer/tests_integration_pgsql/: README.md  conftest.py  orchestrator.py  pgsql_connection.py  pgsql_loader.py  pgsql_orchestrator.py  (+5 more)
src/notebooks/: filesystem-tutorial.ipynb  filesystem.drawio  lms_utilities.py  pyproject.toml  readme.md  record_counts.ipynb  student_logins.ipynb  student_submissions.ipynb
src/schoology-extractor/: .coveragerc  .env.example  .flake8  .mypi.ini  .mypy.ini  README.md  pyproject.toml
src/sql-adapter/: .coveragerc  .mypy.ini  README.md  pyproject.toml
src/zoom/: .env.example  README.md  pyproject.toml
utils/amt-integration-tests/: .flake8  LoadDescriptors.py  README.md  pyproject.toml
utils/file-tester/: .coveragerc  .mypy.ini  .pylintrc  pyproject.toml  readme.md
(+1018 files in other folders)
