
[tool.poetry]
name = "demonstration"
version = "1.0.0"
description = "End-to-end demonstration of extractors and data store loader"
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
edfi-canvas-extractor = "1.0.0b2"
edfi-google-classroom-extractor = "1.0.0b2"
edfi-schoology-extractor = "1.0.0b2"
edfi-lms-ds-loader = "1.0.0b2"
SQLAlchemy = "1.3.23"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
