[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Stephen A. Fuqua <stephen@safnet.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.19.3"
pandas = "^1.1.4"
requests = "^2.25.0"
ipykernel = "^5.3.4"
jupyter = "^1.0.0"
xxhash = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
