[tool.poetry]
name = "schoology"
version = "0.1.0"
description = "Schoology data export"
authors = ["Ed-Fi Alliance, LLC"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.14.0"
prettyprinter = "^0.18.0"
pandas = "^1.1.1"
requests_oauthlib = "^1.3.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
