[tool.poetry]
name = "edfi-canvas-extractor"
version = "2.0.1"
homepage = "https://techdocs.ed-fi.org/display/EDFITOOLS/LMS+Toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"
description = "Extract tool for retrieving student data from Canvas"
readme = "README.md"
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.3.*"
requests = "^2.24.0"
python-dotenv = "0.15.0"
canvasapi = "2.2.0"
xxhash = "^2.0.0"
SQLAlchemy = "^1.3.20"
opnieuw = ">=1.1,<4.0"
errorhandler = "^2.0.1"
ConfigArgParse = "^1.2.3"
edfi-lms-extractor-lib = "^1.1.0"
edfi-lms-file-utils = "^1.0.0"
arrow = "^1.2.3"

[tool.poetry.dev-dependencies]
black = "^24.4"
flake8 = "^7.1.1"
mypy = "^0.790"
coverage = "^5.3"
pook = "^1.0.1"
twine = "^3.3.0"
Faker = "^6.5.0"
pyfakefs = "^4.5.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-describe = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
