[tool.poetry]
name = "edfi-canvas-extractor"
version = "2.0.2"
homepage = "https://docs.ed-fi.org/getting-started/edfi-exchange/technology/ed-fi-lms-toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"
description = "Extract tool for retrieving student data from Canvas"
readme = "README.md"
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">3.9.1,<4.0.0"
cryptography = "^44.0.1"
numpy = "^1"
pandas = "<2.0.0"
requests = "^2.24.0"
python-dotenv = "1.0.1"
canvasapi = "2.2.0"
xxhash = "^2.0.0"
SQLAlchemy = ">=1.4,<2.2"
opnieuw = ">=1.1,<4.0"
errorhandler = "^2.0.1"
ConfigArgParse = "^1.2.3"
edfi-lms-extractor-lib = "^1.1.6"
edfi-lms-file-utils = "^1.0.6"
arrow = "^1.2.3"

[tool.poetry.dev-dependencies]
black = "^24.4"
flake8 = "^7.1.1"
mypy = "^1"
coverage = "^5.3"
pook = "^1.0.1"
twine = "^5.1.0"
Faker = "^6.5.0"
pyfakefs = "^4.5.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-describe = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
