[tool.poetry]
name = "canvas-tools"
version = "0.1.3"
description = ""
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.1.2"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
astroid = "^2.4.2"
canvasapi = "^2.0.0"
certifi = "^2020.6.20"
chardet = "^3.0.4"
colorama = "^0.4.3"
idna = "^2.10"
isort = "^5.5.2"
mccabe = "^0.6.1"
pytz = "^2020.1"
six = "^1.15.0"
toml = "^0.10.1"
urllib3 = "^1.25.10"
wrapt = "^1.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyint = "^1.1.0"
black = "^20.8b1"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
