[tool.poetry]
name = "edfi-lms-extractor-lib"
version = "1.0.0-alpha.5"
homepage = "https://techdocs.ed-fi.org/display/EDFITOOLS/LMS+Toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"
description = "Shared functions library for Ed-Fi LMS Extractor projects"
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"
readme = "README.md"
include = ["edfi_lms_extractor_lib/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.1"
SQLAlchemy = "^1.3.19"
xxhash = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^20.8b1"
flake8 = "^3.8.3"
coverage = "^5.3"
mypy = "^0.782"
pytest-describe = "^1.0.0"
twine = "^3.3.0"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
