[tool.poetry]
name = "edfi-lms-extractor-lib"
version = "1.1.2"
homepage = "https://techdocs.ed-fi.org/display/EDFITOOLS/LMS+Toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"
description = "Shared functions library for Ed-Fi LMS Extractor projects"
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"
readme = "README.md"
include = ["edfi_lms_extractor_lib/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.1"
SQLAlchemy = "~1"
xxhash = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^24.3"
flake8 = "^3.8.3"
coverage = "^5.3"
mypy = "^0.782"
twine = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest-describe = "^2.1.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
