[tool.poetry]
name = "edfi-lms-extractor-lib"
version = "1.1.3"
homepage = "https://docs.ed-fi.org/getting-started/edfi-exchange/technology/ed-fi-lms-toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"
description = "Shared functions library for Ed-Fi LMS Extractor projects"
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"
readme = "README.md"
include = ["edfi_lms_extractor_lib/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.1"
SQLAlchemy = "^1"
xxhash = "^2.0.0"
numpy = "^1"

[tool.poetry.dev-dependencies]
black = "^24.4"
flake8 = "^3.8.3"
coverage = "^5.3"
mypy = "~1"
twine = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest-describe = "^2.1.0"
pytest = "^7.2.0"
cryptography = "^43.0.1"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
