[tool.poetry]
name = "edfi-lms-file-utils"
version = "1.0.0-beta.13"
homepage = "https://techdocs.ed-fi.org/display/EDFITOOLS/LMS+Toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"
description = "Utilities to facilitate use of the filesystem created by Ed-Fi LMS Extractors"
readme = "readme.md"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"
include = ["edfi_lms_file_utils/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.19.3"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pytest = "^6.1.2"
flake8 = "^3.8.4"
pyfakefs = "4.2.1"
pytest-describe = "^1.0.0"
teamcity-messages = "^1.28"
coverage = "^5.3"
pytest-mock = "^3.3.1"
pylint = "^2.6.0"
twine = "^3.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
