[tool.poetry]
name = "edfi-lms-file-utils"
version = "1.0.2"
homepage = "https://techdocs.ed-fi.org/display/EDFITOOLS/LMS+Toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"
description = "Utilities to facilitate use of the filesystem created by Ed-Fi LMS Extractors"
readme = "readme.md"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"
include = ["edfi_lms_file_utils/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "2.0.0"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
black = "^24.4"
mypy = "^0.790"
flake8 = "^3.8.4"
pyfakefs = "^4.5.0"
coverage = "^5.3"
pytest-mock = "^3.3.1"
pylint = "^2.6.0"
twine = "^3.3.0"
freezegun = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest-describe = "^2.1.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
