[tool.poetry]
name = "edfi-lms-file-utils"
version = "1.0.4"
homepage = "https://docs.ed-fi.org/getting-started/edfi-exchange/technology/ed-fi-lms-toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"
description = "Utilities to facilitate use of the filesystem created by Ed-Fi LMS Extractors"
readme = "readme.md"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"
include = ["edfi_lms_file_utils/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]
black = "^24.4"
mypy = "^1"
flake8 = "^3.8.4"
pyfakefs = "^5.6.0"
coverage = "^5.3"
pytest-mock = "^3.3.1"
pylint = "^2.6.0"
twine = "^5.1.1"
freezegun = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest-describe = "^2.1.0"
pytest = "^7.2.0"
cryptography = "^43.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
