[tool.poetry]
name = "edfi-google-classroom-extractor"
version = "1.2.2"
homepage = "https://docs.ed-fi.org/getting-started/edfi-exchange/technology/ed-fi-lms-toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"
description = "Extract tool for retrieving student data from Google Classroom"
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.1,<4.0.0"
google-api-python-client = "^1.11.0"
google-auth-oauthlib = "^0.4.1"
pandas = "<2.0.0"
python-dotenv = "^0.15.0"
opnieuw = "^1.1.0"
tail-recursive = "^2.0.0"
SQLAlchemy = "^1.3.19"
xxhash = "^2.0.0"
numpy = "^1"
errorhandler = "^2.0.1"
ConfigArgParse = "^1.2.3"
edfi-lms-extractor-lib = "^1.1.6"
edfi-lms-file-utils = "^1.0.6"
cryptography = "^44.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^24.4"
flake8 = "^3.8.3"
faker = "^4.1.3"
coverage = "^5.3"
mypy = "^1"
pook = "^1.0.1"
keyring = "^22.0.1"
twine = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest-describe = "^2.1.0"
pytest = "^7.2.0"
types-requests = "^2.32.0.20250306"
types-python-dateutil = "^2.9.0.20241206"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
