[tool.poetry]
name = "lms-ds-installer"
version = "0.1.0"
description = "Learing Management System Data Store (LMS-DS) Installer"
authors = ["Ed-Fi Alliance, LLC and Contributors"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
