[tool.poetry]
name = "edfi-lms-ds-loader"
version = "1.0.0-alpha0"
description = "Ed-Fi LMS Toolkit Data Store Loader"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://techdocs.ed-fi.org/display/EDFITOOLS/LMS+Toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"

[tool.poetry.dependencies]
python = "^3.8"
pyodbc = "^4.0.30"
sqlalchemy = "^1.3.19"
pandas = "^1.1.2"
configargparse = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.3"
pytest-mock = "^3.3.1"
pyfakefs = "^4.1.0"
coverage = "^5.3"
teamcity-messages = "^1.28"
twine = "^3.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
