[tool.poetry]
name = "edfi-lms-ds-loader"
version = "1.0.0-alpha.1"
description = "Ed-Fi LMS Toolkit Data Store Loader"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://techdocs.ed-fi.org/display/EDFITOOLS/LMS+Toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"

[tool.poetry.dependencies]
python = "^3.9"
pyodbc = "^4.0.30"
sqlalchemy = "1.3.23"
pandas = "^1.1.2"
configargparse = "^1.2.3"
sqlparse = "^0.4.1"
psycopg2 = "^2.8.6"
errorhandler = "^2.0.1"
python-dotenv = "^0.15.0"
edfi-lms-extractor-lib = "1.0.0a5"
edfi-lms-file-utils = "1.0.0b16"

[tool.poetry.dev-dependencies]
pytest = "6.2.3"
black = "^20.8b1"
flake8 = "3.9.0"
pytest-mock = "^3.3.1"
pyfakefs = "^4.1.0"
coverage = "^5.3"
twine = "^3.3.0"
mypy = "^0.812"
pytest-describe = "^1.0.0"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
