[tool.poetry]
name = "edfi-lms-ds-loader"
version = "1.2.2"
description = "Ed-Fi LMS Toolkit Data Store Loader"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://docs.ed-fi.org/getting-started/edfi-exchange/technology/ed-fi-lms-toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"

[tool.poetry.dependencies]
python = ">3.9.1,<4.0.0"
cryptography = "^44.0.1"
pyodbc = "^4.0.30"
sqlalchemy = "1.3.23"
pandas = "<2.0.0"
numpy = "^1"
configargparse = "^1.2.3"
sqlparse = ">=0.4.1,<0.6.0"
psycopg2 = "^2.8.6"
errorhandler = "^2.0.1"
python-dotenv = "^0.15.0"
edfi-lms-extractor-lib = "^1.1.6"
edfi-lms-file-utils = "^1.0.6"
edfi-sql-adapter = "^1.0.3"

[tool.poetry.dev-dependencies]
black = "^24.4"
flake8 = "3.9.0"
pytest-mock = "^3.3.1"
pyfakefs = "^4.5.0"
coverage = "^5.3"
twine = "^3.3.0"
mypy = "^1"
sqlalchemy-stubs = "^0.4"
SQLAlchemy-Utils = "^0.38.2"

[tool.poetry.group.dev.dependencies]
pytest-describe = "^2.1.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
