[tool.poetry]
name = "lms-file-tester"
version = "0.1.0"
description = "Test utility for ensuring that LMS Extractor output is correctly structured"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
