[tool.poetry]
name = "edfi-lms-harmonizer"
version = "1.1.0"
description = "Ed-Fi LMS Toolkit Harmonizer"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://techdocs.ed-fi.org/display/EDFITOOLS/LMS+Toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"

[tool.poetry.dependencies]
python = "^3.9"
ConfigArgParse = "^1.4.1"
SQLAlchemy = "1.3.23"
python-dotenv = "^0.17.1"
edfi-lms-extractor-lib = "^1.1.0"
errorhandler = "^2.0.1"
pyodbc = "^4.0.30"
pandas = "^1.2.4"
edfi-sql-adapter = "1.0.0a6"
sqlparse = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "6.2.3"
black = "^21.5b2"
flake8 = "^3.9.2"
coverage = "^5.5"
mypy = "^0.812"
pytest-describe = "^1.0.0"
pytest-mock = "^3.6.1"
pyfakefs = "^4.5.0"
pyodbc = "^4.0.30"
twine = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
