[tool.poetry]
name = "edfi-lms-harmonizer"
version = "1.2.2"
description = "Ed-Fi LMS Toolkit Harmonizer"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://docs.ed-fi.org/getting-started/edfi-exchange/technology/ed-fi-lms-toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"

[tool.poetry.dependencies]
python = ">3.9.1,<4.0.0"
cryptography = "^44.0.1"
ConfigArgParse = "^1.4.1"
SQLAlchemy = "1.3.23"
python-dotenv = "^0.17.1"
edfi-lms-extractor-lib = "^1.1.0"
errorhandler = "^2.0.1"
pyodbc = "^4.0.30"
pandas = "<2.0.0"
numpy = "^1"
edfi-sql-adapter = "^1.0.3"
sqlparse = ">=0.4.1,<0.6.0"

[tool.poetry.dev-dependencies]
black = "^24.4"
flake8 = "^3.9.2"
coverage = "^5.5"
mypy = "^1"
pytest-mock = "^3.6.1"
pyfakefs = "^4.5.0"
pyodbc = "^4.0.30"
twine = "^3.4.2"

[tool.poetry.group.dev.dependencies]
pytest-describe = "^2.1.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
