[tool.poetry]
name = "notebooks"
version = "1.0.2"
description = "Jupyter notebooks for analysis / visualization of LMS data"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.3.2"
pandas = "^1.1.3"
ipykernel = "^6.5"
edfi-lms-file-utils = "^1.0.6"
jupyter = "^1.1.1"
jupyterlab = "^4.2"

[tool.poetry.dev-dependencies]
black = {version = "^24.4", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
