[tool.poetry]
name = "schoology-extractor"
version = "0.1.0"
description = ""
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
pandas = "^1.1.2"
python-dotenv = "^0.14.0"
requests_oauthlib = "^1.3.0"
oauthlib = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"
rope = "^0.17.0"
flake8 = "^3.8.3"
pytest-mock = "^3.3.1"
coverage = "^5.3"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
