
[tool.poetry]
name = "edfi-schoology-extractor"
version = "1.2.2"
homepage = "https://docs.ed-fi.org/getting-started/edfi-exchange/technology/ed-fi-lms-toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"
description = "Extract tool for retrieving student data from Canvas"
readme = "README.md"
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">3.9.1,<4.0.0"
cryptography = "^44.0.1"
requests = "^2.24.0"
pandas = "<2.0.0"
numpy = "^1"
requests_oauthlib = "^1.3.0"
oauthlib = "^3.1.0"
configargparse = "^1.2.3"
python-dotenv = "0.15.0"
opnieuw = "^1.1.0"
SQLAlchemy = "^1.3.20"
errorhandler = "^2.0.1"
edfi-lms-extractor-lib = "^1.1.6"
edfi-lms-file-utils = "^1.0.6"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^24.4"
rope = "^0.17.0"
flake8 = "^3.9.0"
pytest-mock = "^3.3.1"
pyfakefs = "^4.5.0"
coverage = "^5.3"
mypy = "^1"
requests-mock = "^1.8.0"
faker = "^4.18.0"
freezegun = "^1.1.0"
twine = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest-describe = "^2.1.0"
pytest = "^7.2.0"
types-requests = "^2.32.0.20250306"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
