[tool.poetry]
name = "edfi-sql-adapter"
version = "1.0.0-alpha.3"
description = "Lightweight wrapper to facilitate connections to SQL databases"
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://techdocs.ed-fi.org/display/EDFITOOLS/LMS+Toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"

[tool.poetry.dependencies]
python = "^3.9"
pyodbc = "^4.0.30"
psycopg2 = "^2.8.6"
SQLAlchemy = "1.3.23"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
coverage = "^5.5"
mypy = "^0.902"
black = "^21.6b0"
pytest = "^6.2.4"
pytest-describe = "^1.0.0"
twine = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
