[tool.poetry]
name = "edfi-sql-adapter"
version = "1.0.3"
description = "Lightweight wrapper to facilitate connections to SQL databases"
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://docs.ed-fi.org/getting-started/edfi-exchange/technology/ed-fi-lms-toolkit"
repository = "https://github.com/Ed-Fi-Exchange-OSS/LMS-Toolkit"
include = ["edfi_sql_adapter/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
pyodbc = "^4.0.30"
psycopg2 = "^2.8.6"
SQLAlchemy = "^1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
coverage = "^5.5"
mypy = "^1"
black = "^24.4"
twine = "^3.4.1"

[tool.poetry.group.dev.dependencies]
pytest-describe = "^2.1.0"
pytest = "^7.2.0"
cryptography = "^43.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
