[tool.poetry]
name = "amt-integration-tests"
version = "0.1.1"
description = "Integration testing for the Student Engagement views in the Analytics Middle Tier"
authors = ["Ed-Fi Alliance, LLC, and contributors."]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
black = "^24.3"
flake8 = "^3.9.2"
pandas = "^1.3.0"
SQLAlchemy = "1.4.20"
pyodbc = "^4.0.31"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
ConfigArgParse = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest-bdd = "^6.1.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
