[tool.poetry]
name = "file-tester"
version = "0.1.0"
description = "Validates output folders and columns for files created by the Ed-Fi LMS Extractors"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.4"
numpy = "1.19.3"
edfi-lms-file-utils = "^1.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-mock = "^3.3.1"
pytest-describe = "^1.0.0"
pylint = "^2.6.0"
black = "^20.8b1"
teamcity-messages = "^1.28"
pyfakefs = "^4.5.0"
coverage = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
