[tool.poetry]
name = "extractor-shared"
version = "0.1.8"
description = ""
authors = ["Ed-Fi Alliance, LLC, and contributors"]
license = "Apache-2.0"
packages = [
    { include = "extractor_shared" }
]
include = ["extractor_shared/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.1"
SQLAlchemy = "^1.3.19"
xxhash = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^20.8b1"
flake8 = "^3.8.3"
coverage = "^5.3"
mypy = "^0.782"
pytest-describe = "^1.0.0"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
